--- a/apihub_backed/src/main/resources/application.yml
+++ b/apihub_backed/src/main/resources/application.yml
@@ -19,9 +19,9 @@ spring:
   # todo 需替换配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/openapi
+    url: xxxx
     username: root
-    password: 1741534553A
+    password: xxx
   # Redis 配置
   # todo 需替换配置，然后取消注释
   redis:
